grammar.js
    source_file: $ => seq( 
      repeat($.import_declaration),
      $.program_declaration
    ),
    identifier: $ => choice(
      $.constant_identifier,
      $.variable_identifier
    ),


    _numeral: $ => 
    /([0-9]_*)+/,

    unsigned_literal: $ => seq(
    $._numeral,
      choice(
        'u8',
        'u16',
        'u32',
        'u64',
        'u128',
      )
    ),

    signed_literal: $ => seq(
      $._numeral,
      choice(
        'i8',
        'i16',
        'i32',
        'i64',
        'i128',
      )
    ),
    
    field_literal: $ => seq(
      $._numeral,
      'field'
    ),

    product_group_literal: $ => seq(
      $._numeral,
      'group'
    ),

    scalar_literal: $ => seq(
      $._numeral,
      'scalar'
    ),

    boolean_literal: $ => choice(
      'true',
      'false'
    ),

    address_literal: $ => seq(
      'aleo1',
      /[a-z0-9]{58}/
    ),

    program_id: $ => prec(PREC.GROUP_LITERAL,
      seq(
        field('name',$.program_name_literal),
        '.',
        field('extension',$.leo_literal),
      )
    ),

    locator: $ => seq(
      $.program_id,
      '/',
      $.identifier
    ),

    unsigned_type: $ => choice(
      'u8',
      'u16',
      'u32',
      'u64',
      'u128',
    ),

    signed_type: $ => choice(
      'i8',
      'i16',
      'i32',
      'i64',
      'i128',
    ),

    field_type: $ => 'field',

    group_type: $ => 'group',

    scalar_type: $ => 'scalar',

    boolean_type: $ => 'bool',

    address_type: $ => 'address',

    unit_type: $ => seq(
      "(",
      ")"
    ),

    record_type: $ => choice(
      seq(
        $.identifier,
        optional(
          seq(
            '.',
            "record"
          )
        ),
      ),
      seq(
        $.locator,
        optional(
          seq(
            '.',
            "record"
          )
        ),
      ),
    ),


    tuple_type: $ => seq(
      '(',
      $.type,
      repeat1(
        seq(
          ',',
          $.type
      )
        ),
      optional(
        ','
      ),
      ')'
    ),

    type: $ => choice(
      $.unsigned_type,
      $.signed_type,
      $.field_type,
      $.group_type,
      $.scalar_type,
      $.boolean_type,
      $.address_type,
      $.signature_type,
      $.record_type,
      $.unit_type,
      $.tuple_type,
      $.array_type,
    ),

    group_coordinate: $ => choice(
      seq(
        optional('-'),
        $._numeral
      ),
      '+',
      '-',
      '_'
    ),

    affine_group_literal: $ => prec(PREC.GROUP_LITERAL,
      seq(
        '(',
        $.group_coordinate,
        ',',
        $.group_coordinate,
        ')group'
      )
    ),
    
    variable: $ => prec(2, choice(
      $.variable_identifier,
      $.constant_identifier)),

    tuple_expression: $ => seq(
      '(',
      $._expression,
      repeat1(
        seq(
          ',',
          $._expression,
        )
      ),
      optional(','),
    ')'
    ),

    struct_expression: $ => seq(
      $.identifier,
      '{',
      $.struct_component_initializer,
      repeat(
        seq(
          ',',
          $.struct_component_initializer
        )
      ),
      optional(','),
      '}'
    ),

    struct_component_initializer: $ => choice(
      $.identifier,
      seq(
        $.identifier,
        ':',
        $._expression
      )
    ),

    _postfix_expression: $ => choice(
      $.unsigned_literal,
      $.signed_literal,
      $.field_literal,
      $.product_group_literal,
      $.scalar_literal,
      $.boolean_literal,
      $.address_literal,
      $.signature_literal,
      $.affine_group_literal,
      $.variable,
      $.associated_constant,
      seq('(', $._expression, ')'),
      $.free_function_call,
      $.associated_function_call,
      $.unit_expression,
      $.tuple_expression,
      $.array_expression,
      $.struct_expression,
      $.self_caller,
      $.self_signer,
      $.block_height,
      $.tuple_component_expression,
      $.struct_component_expression,
      $.method_call
    ),

    struct_component_expression: $ => prec(PREC.OBJ_ACCESS,
      seq(
        $._postfix_expression,
        '.',
        $.identifier
      )
    ),

    _expression: $ => choice(
      $.unsigned_literal,
      $.signed_literal,
      $.field_literal,
      $.product_group_literal,
      $.scalar_literal,
      $.boolean_literal,
      $.address_literal,
      $.signature_literal,
      $.affine_group_literal,
      $.variable,
      $.associated_constant,
      prec(PREC.PARENS, $.parenthesized_expression),
      $.free_function_call,
      $.associated_function_call,
      $.unit_expression,
      $.tuple_expression,
      $.array_expression,
      $.struct_expression,
      $.self_caller,
      $.self_signer,
      $.block_height,
      $.tuple_component_expression,
      $.struct_component_expression,
      $.method_call,
      prec.right(PREC.UNARY,
        field(
          'unary_expression',
          choice(
            seq('!', $._expression),
            seq('-', $._expression),
          )
        )
      ),
      prec.left(PREC.EXP,
        field(
          'exponential_expression',
          seq($._expression, '**', $._expression)
        )
      ),
      prec.left(PREC.MULT,
        field(
          'multiplicative_expression',
          choice(
            seq($._expression, '*', $._expression),
            seq($._expression, '/', $._expression),
            seq($._expression, '%', $._expression)
          )
        )
      ),
      prec.left(PREC.ADD,
        field(
          'additive_expression',
          choice(
            seq($._expression, '+', $._expression),
            seq($._expression, '-', $._expression)
          )
        )
      ),
      prec.left(PREC.SHIFT,
        field(
          'shift_expression',
          choice(
            seq($._expression, '<<', $._expression),
            seq($._expression, '>>', $._expression)
          )
        )
      ),
      prec.left(PREC.BIT_AND,
        field(
          'conjunctive_expression',
          seq($._expression, '&', $._expression),
        )
      ),
      prec.left(PREC.BIT_OR,
        field(
          'disjunctive_expression',
          seq($._expression, '|', $._expression),
        )
      ),
      prec.left(PREC.BIT_XOR,
        field(
          'exclusive_disjunctive_expression',
          seq($._expression, '^', $._expression)
        )
      ),
      prec.left(PREC.ORDERING,
        field(
          'ordering_expression',
          choice(
            seq($._expression, '<', $._expression),
            seq($._expression, '>', $._expression),
            seq($._expression, '<=', $._expression),
            seq($._expression, '>=', $._expression),
          ),
        )
      ),
      prec.left(PREC.EQUALITY,
        field(
          'equality_expression',
          choice(
            seq($._expression, '==', $._expression),
            seq($._expression, '!=', $._expression),
          )
        )
      ),
      prec.left(PREC.AND,
        field(
          'conditional_conjunctive_expression',
          seq(
            $._expression, '&&', $._expression 
          )
        )
      ),
      prec.left(PREC.OR,
      field('conditional_disjunctive_expression', seq(
        $._expression, '||', $._expression 
      ))),
      $.ternary_expression
    ),

    block: $ => seq(
      '{',
      repeat(
        choice(
          $.return_statement,
          $.expression_statement,
          $.variable_declaration,
          $.conditional_statement,
          $.loop_statement,
          $.assignment_statement,
          $.assert_statement,
          $.block
        )
      ),
      '}'
    ),

    variable_declaration:$ => seq(
      'let',
      $.identifier_or_identifiers,
      ':',
      $.type,
      '=',
      $._expression,
      ';'
    ),

    constant_declaration:$ => seq(
      'const',
      $.identifier,
      ':',
      $.type,
      '=',
      $._expression,
      ';'
    ),

    identifier_or_identifiers:$ => choice(
      $.identifier,
      seq(
        '(',
        $.identifier,
        repeat1(
          seq(
            ',',
            $.identifier
        )
        ),
        optional(','),
        ')'
      )
    ),

    return_arrow: $ => '->',

    function_declaration: $ => seq(
      repeat($.annotation),
      'function',
      field("name", $.identifier),
      optional($.function_parameters),
      optional(
        seq(
          $.return_arrow,
          $.type
        ),
      ),
      $.block
    ),

    function_parameters: $ => seq(
      "(",
      $.function_parameter,
      repeat(
        seq(
          ',',
          $.function_parameter
        )
      ),
      optional(','),
      ")"
    ),  

    function_parameter: $ => seq(
      optional(choice('public', 'private', 'constant')),
      $.identifier, ':', $.type
    ),

    inline_declaration: $ => seq(
      repeat($.annotation),
      'inline',
      field("name", $.identifier),
      optional($.function_parameters),
      optional(
        seq(
          $.return_arrow,
          $.type
        )
      ),
      $.block
    ),

    transition_declaration: $ => seq(
      repeat($.annotation),
      'transition',
      field('name', $.identifier),
        optional($.function_parameters),
      optional(
        seq(
          $.return_arrow,
          optional(
            field( 'output_visibility',
              choice(
                'public',
                'private',
                'constant'
              )
            )
          ),
          $.type
        ),
      ),
      field('body', $.block),
      optional($.finalizer)
    ),

    struct_declaration: $ => seq(
      'struct',
      field('name', $.identifier),
      '{',
      $.struct_component_declarations,
      '}'
    ),

    struct_component_declarations: $ => seq(
      $.struct_component_declaration,
      repeat(seq(',', $.struct_component_declaration)),
      optional(',')
    ),


    struct_component_declaration: $ =>
    seq(
      optional( 
        choice( 
          'public',
          'private',
          'constant',
        )
      ),
      $.identifier,
      ':',
      $.type),


    record_declaration: $ => seq(
      'record', $.identifier, '{', $.struct_component_declarations, '}'
    ),

    mapping_declaration: $ => seq(
      'mapping', $.identifier, ':', $.type, '=>', $.type, ';'
    ),

    program_item: $ => choice(
      $.function_declaration,
      $.inline_declaration,
      $.transition_declaration,
      $.struct_declaration,
      $.record_declaration,
      $.mapping_declaration,
      $.constant_declaration
    ),

    program_declaration: $ => seq(
      'program', $.this_program_id, $.items_block
    ),
